--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.4",
     "express": "^4.15.3",
     "jsonwebtoken": "^7.4.1",
-    "mongoose": "^4.11.1"
+    "mongoose": "^4.11.1",
+    "multer": "^1.3.0"
   }
 }
