--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "angular2-jwt": "^0.2.3",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
+    "ng2-file-upload": "^1.2.1",
     "rxjs": "^5.0.1",
     "semantic-ui-css": "^2.2.11",
     "ts-helpers": "^1.1.1",
