--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
   },
   "homepage": "https://github.com/BrennenRocks/MakeupApp#readme",
   "dependencies": {
+    "aws-sdk": "^2.122.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.3",
     "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.11.1",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "multer-s3": "^2.7.0"
   }
 }
